Fix possible crash & layout adjustments & transparent status bar

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -293,8 +293,9 @@
     <string name="pref_disable_modules_log_summary">模块抛出的的异常堆栈仍将正常抓取</string>
     <string name="follow_system">跟随系统</string>
     <string name="pure_black_dark_theme">使用纯黑深色主题</string>>
-    <string name="install_timestamps">安装于 %1$s \u00b7 更新于 %2$s</string>
+    <string name="install_timestamps">安装于 %1$s\n更新于 %2$s</string>
     <string name="pref_compat_mode_summary">兼容模式应用列表</string>
     <string name="pref_compat_mode_title">兼容模式</string>
     <string name="xposed_not_active">EdXposed 框架未安装或未激活, 您可在设置中关闭状态检查</string>
+    <string name="transparent_status_bar">透明状态栏</string>
 </resources>
