--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -232,7 +232,7 @@
     <string name="meowcat">小喵工作室</string>
     <string name="white_list_mode_summary">白名單模式: 僅選中的應用載入 EdXposed 模組\n僅當啟用應用名單模式時有效</string>
     <string name="pref_title_black_white_list">應用名單模式</string>
-    <string name="pref_black_white_list_summary">開啟後，可在\"應用\"中設定名單\n黑名單模式: 選中的應用不會載入 EdXposed 模組\n注意: 使用應用名單可能會導致某些系統全域性模組不能正常工作\n</string>
+    <string name="pref_black_white_list_summary">開啟後，可在\"應用\"中設定名單\n黑名單模式: 選中的應用不會載入 EdXposed 模組\n注意: 使用應用名單可能會導致某些系統全域性模組不能正常工作</string>
     <string name="ignore_chinese_summary">從模組列表中隱藏中文模組\n模組仍然可以被搜尋到\n啟用此選項可能會降低效能</string>
     <string name="ignore_chinese">忽略中文字元</string>
     <string name="verified_boot_explanation">引導驗證(dm-verity)防止裝置在修改系統分割槽時引導</string>
