--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -300,4 +300,5 @@
     <string name="primary_color">主要色</string>
     <string name="accent_color">强调色</string>
     <string name="colorized_action_bar">着色应用栏</string>
+    <string name="settings_group_theme">主题</string>
 </resources>
