--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -300,4 +300,5 @@
     <string name="primary_color">主要色</string>
     <string name="accent_color">強調色</string>
     <string name="colorized_action_bar">着色應用欄</string>
+    <string name="settings_group_theme">主題</string>
 </resources>
