--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -333,4 +333,6 @@
     <string name="colorized_action_bar">Colorized action bar</string>
     <string name="settings_group_theme">Theme</string>
     <string name="material_design_2">Material Design 2</string>
+    <string name="xposed_description">Enable EdXposed enhancements:\nRemove background restrictions on EdXposed\nDetermine if Xposed is working properly\nPretend to have Xposed Installer installed</string>
+    <string name="status_enhancement">Enhancement mode</string>
 </resources>
