--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -342,4 +342,5 @@
     <string name="settings_title_disable_hidden_api_bypass">Disable hidden API restrictions bypass</string>
     <string name="settings_summary_disable_hidden_api_bypass">Disable hidden API restrictions bypass will pass some detection (eg Snapchat), these APIs are disabled by default\n<b>WARNING:</b> Enable this option may cause some features do not work properly, or some other problems</string>
     <string name="menu_scope">Scope</string>
+    <string name="enable_scope">Enable scope</string>
 </resources>
