--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -107,7 +107,7 @@
     <string name="settings_release_type">要显示的版本</string>
     <string name="settings_group_framework">框架</string>
     <string name="settings_disable_resources">禁用资源钩子</string>
-    <string name="settings_disable_resources_summary">解决与主题引擎的冲突 <b>警告: </b> 启用该选项将导致修改资源的模块无法工作</string>
+    <string name="settings_disable_resources_summary">解决与主题引擎的冲突\n<b>警告: </b> 启用该选项将导致修改资源的模块无法工作</string>
     <string name="settings_group_app">应用</string>
     <string name="settings_theme">主题</string>
     <string name="settings_theme_light">亮色</string>
@@ -200,7 +200,7 @@
     <string name="loading">正在加载…</string>
     <string name="scroll_bottom">滚动到底部</string>
     <string name="skip_xposedminversion_check">关闭状态检查</string>
-    <string name="skip_xposedminversion_check_summ">关闭针对模块的"EdXposed 安装状态"检查</string>
+    <string name="skip_xposedminversion_check_summ">关闭针对模块的\“EdXposed 安装状态\”检查</string>
     <string name="support_xda">获取帮助</string>
     <string name="later">稍后</string>
     <string name="save">仅下载</string>
